The rest of files required for issue 7
